<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/fragmentContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.rwin336.runtracker.RunActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:title="@string/app_name"
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:contentInsetEnd="0dp"
                android:contentInsetLeft="0dp"
                android:contentInsetRight="0dp"
                android:contentInsetStart="0dp"
                android:elevation="2dp"
                app:contentInsetEnd="0dp"
                app:contentInsetLeft="0dp"
                app:contentInsetRight="0dp"
                app:contentInsetStart="0dp"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="left"
                android:text="@string/app_name"
                android:textSize="22sp"
                android:textStyle="bold" />

        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/started"
                android:textAlignment="gravity"
                android:gravity="left"
                android:layout_margin="@dimen/fab_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/run_startedTextView"
                android:text=""
                android:textAlignment="gravity"
                android:gravity="right"
                android:layout_margin="@dimen/fab_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/latitude"
                android:textAlignment="gravity"
                android:gravity="left"
                android:layout_margin="@dimen/fab_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/run_latitudeTextView"
                android:text=""
                android:textAlignment="gravity"
                android:gravity="right"
                android:layout_margin="@dimen/fab_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/longitude"
                android:textAlignment="gravity"
                android:gravity="left"
                android:layout_margin="@dimen/fab_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/run_longitudeTextView"
                android:text=""
                android:textAlignment="gravity"
                android:gravity="right"
                android:layout_margin="@dimen/fab_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/altittude"
                android:textAlignment="gravity"
                android:gravity="left"
                android:layout_margin="@dimen/fab_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/run_altitudeTextView"
                android:text=""
                android:textAlignment="gravity"
                android:gravity="right"
                android:layout_margin="@dimen/fab_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/elapsed_time"
                android:textAlignment="gravity"
                android:gravity="left"
                android:layout_margin="@dimen/fab_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/run_durationTextView"
                android:text=""
                android:textAlignment="gravity"
                android:gravity="right"
                android:layout_margin="@dimen/fab_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/run_startButton"
                android:text="@string/start"
                android:layout_weight="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/run_stopButton"
                android:text="@string/stop"
                android:layout_weight="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </LinearLayout>
</FrameLayout>